Fix modal close button to be white in dark mode

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -18,7 +18,7 @@
     background-color: #222;
 
     svg g path {
-      stroke: black black;
+      stroke: white;
     }
   }
 }
